Fix bug that when the 1st is selected and completed, the circle will overflow, and be truncated

--- a/styles/app.less
+++ b/styles/app.less
@@ -100,7 +100,6 @@ nav {
     width: 200%;
     position: relative;
     margin-left: 47px;
-    overflow-x: hidden;
     
     ul.list {
       top: 0;
@@ -203,12 +202,13 @@ nav {
   .button {
     cursor: pointer;
     top: 60px;
-    width: 50px;
+    width: 45px;
     height: 45px;
     background-color: @pink;
     padding-top: 10px;
     margin-top: -10px;
     position: absolute;
+    z-index: 2;
     
     &.none {
       display: none;
